--- a/Meta-Land/src/main/resources/application.properties
+++ b/Meta-Land/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.javax.persistence.validation.mode = none
 spring.datasource.url=jdbc:postgresql://localhost:5433/MetaLand
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=postgres
-spring.datasource.password=silasener35
+spring.datasource.password=""
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 
